--- a/binSearch.html
+++ b/binSearch.html
@@ -82,18 +82,73 @@
         אם המספר שווה למספר שאותו אנו מחפשים , אנו נחזיר תשובה חיובית חזרה מהפונקציה.
         <br>
         <br>
-        נניח שיש לנו את המערך הבא:
-        <br>
-        <span dir="ltr">arr = {1, 2, 3, 4, 5, 6, 7, 8, 9};</span><br> שידוע לנו שגודלו הוא 9.
-        <br>
-        ואנו רוצים לדעת באיזה אינדקס נמצא האיבר 8 (אם בכלל הוא נמצא).
       </p>
 
     </div>
+
+    <div class="First-Para">
+      <p>
+        נניח שיש לנו את המערך הבא:
+      </p>
+    </div>
+
+    <img class="pic_big" src="assest/TablesForBinSearch/Binary_search_1.png" alt="binary_search_1">
+
+    <div class="First-Para">
+      <p>
+        ואנו רוצים לדעת באיזה אינדקס נמצא האיבר 8 (אם בכלל הוא נמצא).
+        <br>
+        <br>
+        משתנה start מתחיל מ 0.
+        <br>
+        משתנה end מתחיל מהאיבר האחרון של המערך (גודל המערך הוא 9. לכן end שווה ל-8).
+        <br>
+        middle = (start+end)/2 ולכן יהיה שווה ל4 (כי אנחנו מדברים על מספרים שלמים).
+        <br>
+        כעת נבדוק האם בתא middle (תא 4) נמצא הערך 8.
+
+      </p>
+    </div>
+
+    <img class="pic_big" src="assest/TablesForBinSearch/Binary_search_2.png" alt="binary_search_1">
+
+    <div class="First-Para">
+      <p>
+
+        גילינו שהערך בתא middle הוא 5 ולכן אנו מבינים שכל צד שמאל במערך שלנו קטן מ-8 ואין לנו צורך לבדוק יותר בצד זה.
+        <br>
+        בשל כך, בבדיקה הבאה שלנו נקדם את start להיות שווה לאינדקס של (middle+1).
+
+      </p>
+    </div>
+
+    <img class="pic_big" src="assest/TablesForBinSearch/Binary_search_3.png" alt="binary_search_1">
+
+    <div class="First-Para">
+      <p>
+        גילינו שהערך בתא middle הוא 7 ולכן אנו מבינים שכל צד שמאל במערך שלנו קטן מ-8 ואין לנו צורך לבדוק יותר בצד זה.
+        <br>
+        בשל כך, בבדיקה הבאה שלנו נקדם את start להיות שווה לאינדקס של (middle+1).
+
+      </p>
+    </div>
+
+    <img class="pic_big" src="assest/TablesForBinSearch/Binary_search_4.png" alt="binary_search_1">
+
+    <div class="First-Para">
+      <p>
+        בשלב זה גילינו שהערך 8 נמצא בתוך המערך שלנו באינדקס 7.
+        לכן, נחזיר 7 חזרה בפונקציה ונסיים את האלגוריתם.
+
+      </p>
+    </div>
+
+    <br>
+
     <div class="row">
       <div class="col-md-6">
         <div class="para">
-          <p>נריץ את הקוד הבא:</p>
+          <p>דוגמה לפונקצית חיפוש בינארי:</p>
         </div>
       </div>
       <div class="col-md-6">
@@ -198,7 +253,8 @@
       <p>
 
         האלגוריתם המוצג בקוד זה הינו חיפוש בינארי בסיסי, יש אפשרויות לשנות חלקים ממנו בשביל לקבל תוצאה שונה.
-        למשל, אם היינו רוצים לעשות חיפוש בינארי בתוך מערך שקיימות בו חזרות של מספרים (כלומר כל מספר עשוי להופיע יותר מפעם
+        למשל, אם היינו רוצים לעשות חיפוש בינארי בתוך מערך שקיימות בו חזרות של מספרים (כלומר כל מספר עשוי להופיע יותר
+        מפעם
         אחת) והיינו רוצים למצוא את המופע הראשון של המספר.
       </p>
     </div>
