--- a/bubbleSort.html
+++ b/bubbleSort.html
@@ -250,7 +250,7 @@
           <p>
             זמן ריצה של מיון בועות במקרה הטוב והגרוע עומד בסדר גודל של O(n<sup>2</sup>).
             <br>
-            ראוי לציין שזה אינו האלגוריתם היחיד שמממש מיון בועות, כמובן שקיים עוד אלגוריתמים אבל זה האחד שבחרנו להציג.
+            ראוי לציין שזה אינו האלגוריתם היחיד שמממש מיון בועות.
           </p>
         </div>
       </div>
