--- a/selectionSort.html
+++ b/selectionSort.html
@@ -76,6 +76,7 @@
         נחפש כל פעם את הערך המינימלי.
         <br>
         לאחר שעברנו על כל המערך נחליף את הערך המינימלי באיבר הראשון*.
+        <br>
         *בכל פעם האיבר הראשון מתקדם תא אחד במערך עד שנעבור על כולו.
         <br>
         כלומר, במעבר הראשון על המערך האיבר הראשון יהיה האיבר בתא 0.
@@ -103,7 +104,7 @@
         <br>
         בסבב הראשון i מתחיל מ0 ו j מתחיל מ 1 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
         <br>
-        נגדיר את min להיות מספר האיבר בתא 0.
+        נגדיר את min להיות התא הראשון שממנו אנו מתחילים (כלומר 0).
         <br>
         כעת, אנו נעבור על כל המערך ונחפש את האיבר המינימלי.
         <br>
@@ -111,7 +112,7 @@
         <br>
         לאחר שעברנו על כל המערך בפעם הראשונה גילינו כי האיבר המינימלי נמצא בתא מספר 5.
         <br>
-        לכן , נחליף ביניהם.
+        לכן, נחליף ביניהם.
       </p>
     </div>
 
@@ -133,11 +134,11 @@
       <p>
         <spam dir="ltr"> Current Parameters: i=1 ,j=2 ,min=1</spam>
         <br>
-        בסבב השני נגדיל את i ב1 (כי אנחנו יודעים שערך הכי קטן נמצא כבר במיקום שלו), נשווה את הערך שבmin אליו (min=1)
+        בסבב השני i גדל ב1 (כי אנחנו יודעים שערך הכי קטן נמצא כבר במיקום שלו), נשווה את הערך שבmin אליו (min=1)
         <br>
         כלומר, אנו מחפשים כעת את האיבר השני הכי קטן.
         <br>
-        ונגדיר את j להיות 2 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        נגדיר את j להיות 2 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
         <br>
         לאחר שרצנו על כל המערך ראינו כי האיבר שנמצא בתא מספר 1 הוא עצמו המינימלי ולכן לא נבצע החלפה.
         <br>
@@ -153,9 +154,11 @@
       <p>
         <spam dir="ltr"> Current Parameters:
           i=2 ,j=3 ,min=2</spam><br>
-        בסבב השלישי נגדיל את i ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=2) כלומר,
+        בסבב השלישי i גדל ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=2) כלומר,
         אנו מחפשים כעת את האיבר השלישי הכי קטן.
-        ונגדיר את j להיות 3 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        <br>
+        נגדיר את j להיות 3 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        <br>
         לאחר שרצנו על כל המערך ראינו כי האיבר שנמצא בתא מספר 4 הוא המינימלי ולכן נחליף אותו עם תא מספר 2.
       </p>
     </div>
@@ -174,10 +177,10 @@
       <p>
         <spam dir="ltr"> Current Parameters:i=3 ,j=4 ,min=3</spam>
         <br>
-        בסבב הרביעי נגדיל את i ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=3) כלומר,
+        בסבב הרביעי i גדל ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=3) כלומר,
         אנו מחפשים כעת את האיבר הרביעי הכי קטן.
         <br>
-        ונגדיר את j להיות 4 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        נגדיר את j להיות 4 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
         <br>
         לאחר שרצנו על כל המערך ראינו כי האיבר שנמצא בתא מספר 5 הוא המינימלי ולכן נחליף אותו עם תא מספר 3.
       </p>
@@ -201,10 +204,10 @@
       <p>
         <spam dir="ltr"> Current Parameters:i=4 ,j=5 ,min=4</spam>
         <br>
-        בסבב החמישי נגדיל את i ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=4) כלומר,
+        בסבב החמישי i גדל  ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=4) כלומר,
         אנו מחפשים כעת את האיבר החמישי הכי קטן.
         <br>
-        ונגדיר את j להיות 5 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        נגדיר את j להיות 5 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
         <br>
         לאחר שרצנו על כל המערך ראינו כי האיבר שנמצא בתא מספר 4 הוא עצמו המינימלי ולכן לא נבצע החלפה.
         <br>
@@ -221,11 +224,11 @@
         <spam dir="ltr"> Current Parameters:
           i=5 ,j=6 ,min=5</spam>
         <br>
-        בסבב השישי (והאחרון) נגדיל את i ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=5)
+       בסבב השישי (והאחרון) i גדל ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=5).
         <br>
         כלומר, אנו מחפשים כעת את האיבר השישי הכי קטן.
         <br>
-        ונגדיר את j להיות 6 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
+        נגדיר את j להיות 6 (כדי למנוע בדיקה על אותו המספר בריצה הראשונה).
         <br>
         כעת, אנו רואים כי j שווה לגודל המערך ולכן אין צורך לרוץ על המערך כי אנחנו יודעים שאין יותר ערכים לא ממוינים.
         <br>
@@ -250,7 +253,14 @@
       <div class="col-md-6">
         <figure class="code">
           <figcaption id="example1-caption">CODE:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+<b>void</b> swap(<b>int</b> *<i>num1</i>, <b>int</b> *<i>num2</i>)
+{
+  <b>int</b> temp = *<i>num1</i>;
+  *<i>num1</i> = *<i>num2</i>;
+  *<i>num2</i> = temp;
+}
+
 <b>void</b> selection_sort(<b>int</b> *array, <b>int</b> n)
 {
   <b>int</b> i, j, min;
