--- a/quickSort.html
+++ b/quickSort.html
@@ -102,17 +102,9 @@
     <!--מיון זה עובד בצורה הבאה-->
     <div class="First-Para">
       <p>
-
-      </p>
-    </div>
-
-
-    <!--מיון זה עובד בצורה הבאה-->
-    <div class="First-Para">
-      <p>
         לאחר שבחרנו pivot אנו מתחילים לבצע השוואות בצורה באה:
         <br>
-        ראשית, נשווה את pivot לערכים מתחילת המערך (במקום ה-j ).
+        ראשית, נשווה את pivot לערכים מתחילת המערך (במקום ה-j).
       </p>
     </div>
 
@@ -142,7 +134,7 @@
     <!--דוגמה לביצוע המיון:-->
     <br>
     <h3 class="head-right">דוגמה לביצוע המיון:</h3>
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_1.png" alt="table_1">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_1.png" alt="table_1">
 
 
     <div class="First-Para">
@@ -152,27 +144,27 @@
         שנית, i יהיה שווה ל 1-.
         <br>
         j יהיה שווה ל-0.
+        <br>
+        <br>
+        <br>
       </p>
     </div>
-
 
     <!--דוגמה לביצוע המיון:-->
     <div class="First-Para">
       <p>
-        <br>
-        <br>
-        <br>
-        כעת אנו משווים
-        כעת אנו משווים בין הערך בתא (114) j ל- pivot (8).
+        כעת אנו משווים בין הערך בתא j שהוא (114) 
+        ל-pivot שערכו הוא
+       (8) 
       </p>
     </div>
 
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_2.png" alt="table_2">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_2.png" alt="table_2">
 
 
     <div class="First-Para">
-      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -183,17 +175,18 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j (97) ל- pivot (8).
-        <br>
+        כעת אנו משווים בין הערך בתא j שהוא (97) 
+        ל-pivot שערכו הוא
+       (8) 
       </p>
     </div>
 
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_4.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_4.png" alt="">
 
 
     <div class="First-Para">
-      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -209,14 +202,16 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j (14) ל- pivot (8).
+        כעת אנו משווים בין הערך בתא j שהוא (14) 
+        ל-pivot שערכו הוא
+        (8).
       </p>
     </div>
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_6.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_6.png" alt="">
 
     <div class="First-Para">
-      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
     <div class="First-Para">
       <p>
@@ -230,29 +225,34 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j (1) ל-pivot (8).
+        כעת אנו משווים בין הערך בתא j שהוא (1) 
+        ל-pivot שערכו הוא
+        (8).
       </p>
     </div>
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_9.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_9.png" alt="">
 
 
     <div class="First-Para">
-      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
     <div class="First-Para">
       <p>
+        <br>
+        <br>
+        <br>
         בגלל ש1 קטן מ8 מבצעים החלפה, מגדילים את j ו i ב-1 והמערך יראה כך:
       </p>
     </div>
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_10.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_10.png" alt="">
 
 
     <div class="First-Para">
-      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -279,7 +279,7 @@
       </p>
     </div>
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_11.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_11.png" alt="">
 
 
     <div class="First-Para">
@@ -290,7 +290,7 @@
     </div>
 
 
-    <img class="pic_big" src="assest/TablesForQuickSort/quick_sort_12.png" alt="">
+    <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_12.png" alt="">
 
     <br>
     <br>
