--- a/quickSort.html
+++ b/quickSort.html
@@ -153,9 +153,9 @@
     <!--דוגמה לביצוע המיון:-->
     <div class="First-Para">
       <p>
-        כעת אנו משווים בין הערך בתא j שהוא (114) 
+        כעת אנו משווים בין הערך בתא j שהוא (114)
         ל-pivot שערכו הוא
-       (8) 
+        (8)
       </p>
     </div>
 
@@ -164,7 +164,7 @@
 
 
     <div class="First-Para">
-      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -175,9 +175,9 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j שהוא (97) 
+        כעת אנו משווים בין הערך בתא j שהוא (97)
         ל-pivot שערכו הוא
-       (8) 
+        (8)
       </p>
     </div>
 
@@ -186,7 +186,7 @@
 
 
     <div class="First-Para">
-      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -202,7 +202,7 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j שהוא (14) 
+        כעת אנו משווים בין הערך בתא j שהוא (14)
         ל-pivot שערכו הוא
         (8).
       </p>
@@ -211,7 +211,7 @@
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_6.png" alt="">
 
     <div class="First-Para">
-      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
     <div class="First-Para">
       <p>
@@ -225,7 +225,7 @@
         <br>
         <br>
         <br>
-        כעת אנו משווים בין הערך בתא j שהוא (1) 
+        כעת אנו משווים בין הערך בתא j שהוא (1)
         ל-pivot שערכו הוא
         (8).
       </p>
@@ -235,7 +235,7 @@
 
 
     <div class="First-Para">
-      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
@@ -252,7 +252,7 @@
 
 
     <div class="First-Para">
-      <img class="pic_ex_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
+      <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
 
 
