--- a/pointers.html
+++ b/pointers.html
@@ -27,12 +27,18 @@
 </head>
 
 <body class="bg-four scrollbar scrollbar_style" id="the_main_id">
+
   <section id="topPageIcon">
+
     <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i></span>
+        class="sidenav-icon fas fa-bars"></i>
+      </span>
+
   </section>
+  
   <section id="topPage">
   </section>
+
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
