--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 
   </section>
 
+  <section id="topPage">
+  </section>
+
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html"><span class="colorcheck">מי אנחנו?</span></a>
