--- a/arrays.html
+++ b/arrays.html
@@ -19,17 +19,26 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Java Script -->
-  <script src="js/code.js"></script>
-
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+  <script type="text/javascript" src="js/code.js"></script>
 
 </head>
 
-<body class="bg-twoAndHalf scrollbar scrollbar_style">
-  <section id="topPage">
-    <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
+<body class="bg-twoAndHalf scrollbar scrollbar_style" id="the_main_id">
+ 
+  <section id="topPageIcon">
+    
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
+        class="sidenav-icon fas fa-bars"></i></span>
   </section>
+
+  <section id="topPage">
+  </section>
+
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -56,7 +65,7 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  <section id="main" onclick="openOrCloseNav(0)">
+  <section id="main" onclick="openOrCloseNav(0,0)">
 
     <h1 class="head-left">Let's learn C</h1>
     <h2 class="head-right">מערכים</h2>
