--- a/mergeSort.html
+++ b/mergeSort.html
@@ -18,17 +18,24 @@
   <link rel="stylesheet" href="css/styles.css">
 
   <!-- Java Script -->
-  <script src="js/code.js"></script>
-
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+  <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
+  <script type="text/javascript" src="js/code.js"></script>
 
 </head>
 
-<body class="bg-five scrollbar scrollbar_style">
+<body class="bg-five scrollbar scrollbar_style" id="the_main_id">
+  <section id="topPageIcon">
+    
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
+        class="sidenav-icon fas fa-bars"></i></span>
+  </section>
+
   <section id="topPage">
-    <span class="sidenav-icon" onclick="openOrCloseNav(1)"><i class="sidenav-icon fas fa-bars"></i></span>
   </section>
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0)">&times;</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
@@ -55,7 +62,7 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html"><span class="colorcheck">מיון מיזוג</span></a>
   </div>
-  <section id="main" onclick="openOrCloseNav(0)">
+  <section id="main" onclick="openOrCloseNav(0,0)">
 
     <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
     <h1 class="head-right">מיון מיזוג</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
