--- a/mergeSort.html
+++ b/mergeSort.html
@@ -27,16 +27,17 @@
 
 <body class="bg-five scrollbar scrollbar_style" id="the_main_id">
   <section id="topPageIcon">
-    
+
     <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
         class="sidenav-icon fas fa-bars"></i></span>
   </section>
 
   <section id="topPage">
   </section>
+
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
-    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
-    <a href="index.html">מי אנחנו?</a>
+    <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a> <a href="index.html">מי
+      אנחנו?</a>
     <a href="firstProgram.html">התוכנית הראשונה</a>
     <a href="variables.html">משתנים</a>
     <a href="printAndScan.html">קלט ופלט</a>
@@ -62,6 +63,7 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html"><span class="colorcheck">מיון מיזוג</span></a>
   </div>
+
   <section id="main" onclick="openOrCloseNav(0,0)">
 
     <h1 class="head-left">Lets learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
@@ -84,14 +86,17 @@
         (הפירוק מתבצע בעזרת אינדקסים left_side , middle וright_side שמציינים את התאים ההתחלתיים והסופיים של המערכים אך
         כל זה מתבצע על המערך המקורי).
         <br>
+        <br>
         שנית ,לוקחים שני מערכים ממוינים, ממזגים אותם לתוך מערך חדש (יוצרים מערך חדש ממוין) על ידי השוואה בין ערכיהם
-        ולאחר מכן מעתיקים אותם למערך המקורי
+        ולאחר מכן מעתיקים אותם למערך המקורי.
         <br>
-        (לוקחים 2 מערכים בגודל 1 וממזגים אותם למערך בגודל 2, לוקחים 2 מערכים ממוינים בגודל 2 וממזגים אותם למערך בגודל 4,
-        לוקחים שני מערכים ממוינים בגודל 4 וממזגים אותם למערך בגודל 8 וכך הלאה).
+        כלומר,
+        לוקחים 2 מערכים בגודל 1 (שממוינים מעצם גודלם) וממזגים אותם למערך בגודל 2, לוקחים 2 מערכים ממוינים בגודל 2
+        וממזגים אותם למערך בגודל 4,
+        לוקחים שני מערכים ממוינים בגודל 4 וממזגים אותם למערך בגודל 8 וכך הלאה עד שחזרנו למערך ממוין בגודל המקורי.
         <br>
-        שלבים אלו מתבצעים באופן רקורסיבי (במידה ואינכם לגמרי מבינים את הנושא עדיין כדאי לחזור לנושא <a
-          href="recursion.html">רקורסיות</a> עד לקבלת מערך ממוין.
+        <br>
+        שלבים אלו מתבצעים באופן רקורסיבי ובמידה ומשהו בדרך לא לגמרי ברור, כדאי לחזור על נושא <a href="recursion.html">רקורסיות</a>.
       </p>
     </div>
 
@@ -121,7 +126,7 @@
         <br>
         האיבר באינדקס 0 של מערך א' אל מול האיבר באינדקס 0 של מערך ב'.
         <br>
-        האינדקס של הקטן מבין הערכים יתקדם (כלומר, אם היה לנו במערך א' אינדקס 0 את הערך 8 אל מול מערך ב' באינדקס 0 שבו 6
+        האינדקס של הקטן מבין הערכים יתקדם (כלומר, אם היה לנו במערך א' אינדקס 0 את הערך 8 אל מול מערך ב' באינדקס 0 שבו הערך הוא 6
         – האינדקס של מערך ב' יתקדם).
         <br>
         לאחר שאחד מהמערכים שלנו הסתיים (כלומר, האינדקס שלו חרג מגבולות גודל המערך), תיעשה העתקה של שאר האיברים שנותרו
@@ -176,13 +181,15 @@
 
     <div class="First-Para">
       <p>
-        כעת נבצע מיון ומיזוג על שני המערכים הראשונים (תא 0 נקרא לו מערך א', תא 1 נקרא לו מערך ב').
+        כעת נבצע מיון ומיזוג על שני המערכים הראשונים (לתא 0 נקרא מערך א', לתא 1 מערך ב' , תא 2 מערך ג' וכן הלאה).
         <br>
-        בגלל שהערך במערך א' (16) גדול יותר משל מערך ב' (2) אנו מכניסים את הערך 2 לתוך המערך החדש וכעת הגענו לסוף מערך
-        ב', לכן מעתיקים את כל הערכים במערך א' למערך החדש (נבצע את אותם פעולות על תא 2 עם תא 3).
+        בגלל שהערך במערך א' (16) גדול יותר משל מערך ב' (2) אנו מכניסים את הערך 2 לתוך המערך החדש בתחילתו וכעת הגענו לסוף מערך
+        ב'.
+        <br>
+         לכן, נעתיק את הערכים שבמערך א' למערך החדש (נבצע את אותם פעולות גם על מערך ג' ומערך ד').
         <br>
         <br>
-        לאחר מיון ומיזוג תא 0 עם 1 ותא 2 עם 3 נקבל את שני המערכים הבאים:
+        לאחר מיזוג ראשוני של מעריך בגודל 1 אנו נקבל:
       </p>
     </div>
 
@@ -263,7 +270,7 @@
     <div class="First-Para">
       <p>
         <br>
-        הגענו לסוף של מערך ב' אבל במערך א' עדיין נשארו איברים , כעת מכניסים אותם לפי הסדר ויתקבל המערך הבא:
+        הגענו לסוף של מערך ב' אבל במערך א' עדיין נשארו איברים , כעת מכניסים אותם לפי הסדר (כי, כפי שידוע לנו המערך שנותר לנו ממוין וכל איבריו גדולים מאיברי המערך שאליו אנו מעבירים את הערכים) ויתקבל המערך הבא:
       </p>
     </div>
 
@@ -271,11 +278,13 @@
     <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_12.png" alt="">
 
 
+    <br>
+    <br>
+
+
     <div class="First-Para">
       <p>
-        החלק השמאלי ביותר של המערך כרגע ממוין.
-        <br>
-        כעת נשאר לבצע את אותם פעולות על המערך השלישי (עם ערכים 19 ו1) והמערך הרביעי (עם ערכים 3 ו28).
+        כעת נותר לנו לבצע את אותן הפעולות על המערכים בגודל 2 שנותרו לנו מתחילת המיון:
       </p>
     </div>
 
@@ -322,9 +331,11 @@
 
     <div class="First-Para">
       <p>
-        כמו שעשינו קודם לכן, נבצע מיזוג בין שני המערכים האלו לתוך מערך בגודל 8
+        כפי שעשינו קודם, נבצע מיזוג בין שני המערכים האלו לתוך מערך (בגודל 8).
         <br>
-        (נבדוק אינדקס מול אינדקס ונקדם את האינדקס שערך איברו היה הנמוך יותר) ויתקבל המערך הבא:
+        נבדוק אינדקס מול אינדקס ונקדם את האינדקס שערך איברו היה הנמוך יותר.
+        <br>
+        נקבל את המערך הבא:
       </p>
     </div>
     <br>
@@ -414,22 +425,34 @@
 
   <div class="First-Para">
     <p>
-      void merge(int *array, int left_side, int middle, int right_side) – פונקציה אשר מבצעת את המיון והמיזוג המערכים.
-
+      void merge(int *array, int left_side, int middle, int right_side): 
       <br>
-      temp_array – מערך עזר שנועד בשביל מיזוג תתי המערכים ולאחר מכן מעתיקים את הערכים למערך המקורי.
-
+      פונקציה אשר מבצעת את המיון והמיזוג המערכים.
       <br>
-      left_side – מציין את תא ההתחלה של המערך השמאלי.
-
       <br>
-      middle – middle מציין את התא האחרון של המערך השמאלי ותא middle +1 מציין את התא ההתחלתי של המערך הימני.
-
+      temp_array:
       <br>
-      right_side – מציין את התא האחרון במערך הימני.
-
+      מערך עזר שנועד בשביל מיזוג תתי המערכים ולאחר מכן מעתיקים את הערכים למערך המקורי.
       <br>
-      void mergeSort(int *array, int left_side, int right_side) – הפונקציה הרקורסיבית שמקבלת מערך את התא הראשון במערך
+      <br>
+      left_side:
+      <br>
+      מציין את תא ההתחלה של המערך השמאלי.
+      <br>
+      <br>
+      middle:
+      <br>
+      middle מציין את התא האחרון של המערך השמאלי ותא middle +1 מציין את התא ההתחלתי של המערך הימני.
+      <br>
+      <br>
+      right_side: 
+      <br>
+      מציין את התא האחרון במערך הימני.
+      <br>
+      <br>
+      void mergeSort(int *array, int left_side, int right_side):
+      <br>
+      הפונקציה הרקורסיבית שמקבלת מערך את התא הראשון במערך
       ואת התא האחרון במערך.
     </p>
   </div>
